--- a/package.json
+++ b/package.json
@@ -7,26 +7,32 @@
   "author": "Johannes Ewald @jhnns",
   "homepage": "https://github.com/webpack-contrib/less-loader",
   "bugs": "https://github.com/webpack-contrib/less-loader/issues",
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/webpack"
+  },
   "main": "dist/cjs.js",
   "engines": {
     "node": ">= 10.13.0"
   },
   "scripts": {
     "start": "npm run build -- -w",
-    "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
-    "build:fixtures": "babel-node test/helpers/createSpec.js",
     "clean": "del-cli dist",
+    "prebuild": "npm run clean",
+    "build": "cross-env NODE_ENV=production babel src -d dist --copy-files",
+    "build:fixtures": "babel-node test/helpers/createSpec.js",
     "commitlint": "commitlint --from=master",
-    "lint": "eslint --cache src test",
+    "security": "npm audit",
+    "lint:prettier": "prettier \"{**/*,*}.{js,json,md,yml,css,ts}\" --list-different",
+    "lint:js": "eslint --cache .",
+    "lint": "npm-run-all -l -p \"lint:**\"",
+    "test:only": "cross-env NODE_ENV=test npm run build:fixtures && jest",
+    "test:watch": "npm run test:only -- --watch",
+    "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
+    "pretest": "npm run lint",
+    "test": "npm run test:coverage",
     "prepare": "npm run build",
     "release": "standard-version",
-    "security": "npm audit",
-    "test:only": "cross-env NODE_ENV=test npm run build:fixtures && jest",
-    "test:watch": "cross-env NODE_ENV=test npm run build:fixtures && jest --watch",
-    "test:coverage": "cross-env NODE_ENV=test npm run build:fixtures && jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "pretest": "npm run lint",
-    "test": "cross-env NODE_ENV=test npm run test:coverage",
     "defaults": "webpack-defaults"
   },
   "files": [
@@ -34,40 +40,44 @@
   ],
   "peerDependencies": {
     "less": "^2.3.1 || ^3.0.0",
-    "webpack": "^2.0.0 || ^3.0.0 || ^4.0.0"
+    "webpack": "^4.0.0 || ^5.0.0"
   },
   "dependencies": {
     "clone": "^2.1.1",
-    "loader-utils": "^1.1.0",
-    "pify": "^4.0.1"
+    "loader-utils": "^1.2.3",
+    "pify": "^4.0.1",
+    "schema-utils": "^2.6.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/node": "^7.6.3",
-    "@babel/preset-env": "^7.6.3",
-    "@commitlint/cli": "^8.3.1",
-    "@commitlint/config-conventional": "^7.5.0",
-    "@webpack-contrib/defaults": "^5.0.2",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@commitlint/cli": "^8.3.4",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@webpack-contrib/defaults": "^6.3.0",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^24.7.1",
-    "commitlint-azure-pipelines-cli": "^1.0.1",
+    "commitlint-azure-pipelines-cli": "^1.0.3",
     "cross-env": "^5.2.1",
     "del": "^5.0.0",
     "del-cli": "^3.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "husky": "^2.7.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.0.10",
     "inspect-loader": "^1.0.0",
     "jest": "^24.7.1",
     "jest-junit": "^7.0.0",
     "less": "^3.9.0",
     "lint-staged": "^9.4.2",
+    "memfs": "^3.1.2",
     "memory-fs": "^0.4.1",
-    "prettier": "^1.17.0",
-    "standard-version": "^7.0.0",
-    "webpack": "^4.30.0"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
+    "standard-version": "^7.0.1",
+    "webpack": "^4.42.0"
   },
   "keywords": [
     "webpack",
