--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "dist"
   ],
   "peerDependencies": {
-    "less": "^3.5.0",
+    "less": "^3.5.0 || ^4.0.0",
     "webpack": "^4.0.0 || ^5.0.0"
   },
   "dependencies": {
@@ -64,7 +64,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
-    "less": "^3.12.2",
+    "less": "^4.0.0",
     "lint-staged": "^10.5.1",
     "memfs": "^3.2.0",
     "npm-run-all": "^4.1.5",
