--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
   },
   "dependencies": {
     "klona": "^2.0.4",
-    "loader-utils": "^2.0.0",
-    "schema-utils": "^3.0.0"
+    "loader-utils": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
