--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
   ],
   "peerDependencies": {
     "less": "^3.5.0 || ^4.0.0",
-    "webpack": "^4.0.0 || ^5.0.0"
+    "webpack": "^5.0.0"
   },
   "dependencies": {
-    "klona": "^2.0.4",
-    "loader-utils": "^2.0.0",
-    "schema-utils": "^3.0.0"
+    "klona": "^2.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -58,20 +56,20 @@
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
     "del-cli": "^3.0.1",
-    "eslint": "^7.18.0",
+    "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
-    "less": "^4.1.0",
+    "less": "^4.1.1",
     "lint-staged": "^10.5.3",
     "memfs": "^3.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "standard-version": "^9.1.0",
     "strip-ansi": "^6.0.0",
-    "webpack": "^5.16.0"
+    "webpack": "^5.19.0"
   },
   "keywords": [
     "webpack",
