--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "pretest": "npm run lint",
     "test": "npm run test:coverage",
     "prepare": "npm run build",
-    "release": "standard-version",
-    "defaults": "webpack-defaults"
+    "release": "standard-version"
   },
   "files": [
     "dist"
@@ -45,31 +44,29 @@
     "klona": "^2.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@webpack-contrib/defaults": "^6.3.0",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
     "del-cli": "^3.0.1",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "less": "^4.1.1",
-    "lint-staged": "^10.5.3",
-    "memfs": "^3.2.0",
+    "lint-staged": "^10.5.4",
+    "memfs": "^3.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "standard-version": "^9.1.0",
+    "standard-version": "^9.2.0",
     "strip-ansi": "^6.0.0",
-    "webpack": "^5.19.0"
+    "webpack": "^5.33.2"
   },
   "keywords": [
     "webpack",
