--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
     "pretest": "npm run lint",
     "test": "npm run test:coverage",
-    "prepare": "npm run build",
+    "prepare": "husky install && npm run build",
     "release": "standard-version"
   },
   "files": [
@@ -44,21 +44,21 @@
     "klona": "^2.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.2",
-    "@babel/preset-env": "^7.14.2",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.0.2",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
     "del-cli": "^3.0.1",
-    "eslint": "^7.26.0",
+    "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.3",
     "less": "^4.1.1",
     "lint-staged": "^11.0.0",
     "memfs": "^3.2.2",
@@ -66,7 +66,7 @@
     "prettier": "^2.3.0",
     "standard-version": "^9.3.0",
     "strip-ansi": "^7.0.0",
-    "webpack": "^5.37.0"
+    "webpack": "^5.38.1"
   },
   "keywords": [
     "webpack",
