--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "less": "^4.1.1",
+    "less-plugin-glob": "^3.0.0",
     "lint-staged": "^11.0.1",
     "memfs": "^3.2.2",
     "npm-run-all": "^4.1.5",
