--- a/package.json
+++ b/package.json
@@ -11,15 +11,11 @@
     "type": "opencollective",
     "url": "https://opencollective.com/webpack"
   },
-  "main": "dist/cjs.js",
+  "main": "src/cjs.js",
   "engines": {
     "node": ">= 14.15.0"
   },
   "scripts": {
-    "start": "npm run build -- -w",
-    "clean": "del-cli dist",
-    "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production babel src -d dist --copy-files",
     "commitlint": "commitlint --from=master",
     "security": "npm audit --production",
     "lint:prettier": "prettier --list-different .",
@@ -30,11 +26,11 @@
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
     "pretest": "npm run lint",
     "test": "npm run test:coverage",
-    "prepare": "husky install && npm run build",
+    "prepare": "husky install",
     "release": "standard-version"
   },
   "files": [
-    "dist"
+    "src"
   ],
   "peerDependencies": {
     "less": "^3.5.0 || ^4.0.0",
@@ -44,13 +40,9 @@
     "klona": "^2.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
-    "babel-jest": "^28.1.3",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
     "del-cli": "^4.0.1",
