--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack": "^5.0.0"
   },
   "dependencies": {
+    "jest-worker": "^29.0.3",
     "klona": "^2.0.4"
   },
   "devDependencies": {
@@ -50,7 +51,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
-    "babel-jest": "^28.1.3",
+    "babel-jest": "^29.0.3",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
     "del-cli": "^4.0.1",
@@ -58,7 +59,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.1",
     "husky": "^8.0.1",
-    "jest": "^28.1.3",
+    "jest": "^29.0.3",
     "less": "^4.1.3",
     "less-plugin-glob": "^2.0.2",
     "lint-staged": "^12.5.0",
