--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "security": "npm audit --production",
     "lint:prettier": "prettier --list-different .",
     "lint:js": "eslint --cache .",
+    "lint:spelling": "cspell \"**/*.*\"",
     "lint": "npm-run-all -l -p \"lint:**\"",
     "test:only": "cross-env NODE_ENV=test jest",
     "test:watch": "npm run test:only -- --watch",
@@ -52,6 +53,7 @@
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^29.2.2",
     "cross-env": "^7.0.3",
+    "cspell": "^6.14.3",
     "del": "^6.1.1",
     "del-cli": "^4.0.1",
     "eslint": "^8.26.0",
