--- a/package.json
+++ b/package.json
@@ -42,31 +42,32 @@
     "webpack": "^5.0.0"
   },
   "dependencies": {
-    "klona": "^2.0.4"
+    "klona": "^2.0.4",
+    "v": "^0.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.7",
+    "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
-    "babel-jest": "^29.3.1",
+    "babel-jest": "^29.4.1",
     "cross-env": "^7.0.3",
-    "cspell": "^6.18.1",
+    "cspell": "^6.20.1",
     "del": "^6.1.1",
     "del-cli": "^4.0.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.1",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "husky": "^8.0.3",
+    "jest": "^29.4.1",
     "less": "^4.1.3",
     "less-plugin-glob": "^2.0.2",
     "lint-staged": "^12.5.0",
-    "memfs": "^3.4.12",
+    "memfs": "^3.4.13",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "standard-version": "^9.3.1",
     "strip-ansi": "^7.0.0",
     "webpack": "^5.75.0"
