--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "security": "npm audit --production",
     "lint:prettier": "prettier --list-different .",
     "lint:js": "eslint --cache .",
-    "lint:spelling": "cspell \"**/*.*\"",
+    "lint:spelling": "cspell --quiet \"**/*.*\"",
     "lint": "npm-run-all -l -p \"lint:**\"",
     "fix:js": "npm run lint:js -- --fix",
     "fix:prettier": "npm run lint:prettier -- --write",
@@ -48,25 +48,25 @@
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
-    "@commitlint/cli": "^17.7.2",
-    "@commitlint/config-conventional": "^17.7.0",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "cspell": "^6.31.2",
-    "del": "^6.1.1",
-    "del-cli": "^4.0.1",
+    "cspell": "^8.3.2",
+    "del": "^7.1.0",
+    "del-cli": "^5.1.0",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.9.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "less": "^4.2.0",
-    "less-plugin-glob": "^2.0.2",
-    "lint-staged": "^13.2.3",
-    "memfs": "^3.5.1",
+    "less-plugin-glob": "^3.0.0",
+    "lint-staged": "^15.2.0",
+    "memfs": "^4.6.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.2.2",
     "standard-version": "^9.3.1",
     "strip-ansi": "^7.1.0",
     "webpack": "^5.89.0"
