--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "@babel/preset-env": "^7.24.7",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
+    "@eslint/js": "^9.32.0",
     "@eslint/markdown": "^7.1.0",
+    "@stylistic/eslint-plugin": "^5.2.2",
     "babel-jest": "^30.0.0",
     "cross-env": "^7.0.3",
     "cspell": "^8.10.0",
@@ -64,6 +66,9 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-n": "^17.21.1",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-unicorn": "^60.0.0",
+    "globals": "^16.3.0",
     "husky": "^9.1.3",
     "jest": "^30.0.0",
     "less": "^4.2.0",
